# labctl

./: .gitignore  Cargo.toml  README.md  build.rs  cluster.berlin.toml  rust-toolchain.toml
.github/workflows/: ci.yml
docs/: CONTENT_ADDRESSED_STORAGE.md  INIT.md  ONBOARDING.md  POSTGRES_DEPLOY.md  RECIPE_CONTRACT.md
examples/: README.md
examples/clusters/: multi-tenant.toml  single-user.toml  with-remote.toml
examples/pipelines/: from-pinned.toml
examples/policies/: eval_per_checkpoint.toml
examples/recipes/: eval.toml  eval_from.toml  sweep.toml  train.toml
migrations/: 0001_initial_schema.sql  0002_constraints_and_notify.sql  0002_partial_cache_key_index.sql  0003_cache_key_inflight_unique.sql  0003_users.sql  0004_drop_dead_hash_surface.sql  0005_drop_coalesce.sql  0006_drop_artifact_residue.sql
scripts/: import-to-pg.py  install.sh  migrate-content-addressed.py  seed-demo.py
scripts/hooks/: pre-push
src/: admin.rs  agent.rs  artifacts.rs  client.rs  config.rs  dispatch.rs  evald.rs  fs_layout.rs  init.rs  main.rs  pg_store.rs  prompt.rs  provenance.rs  remote.rs  runner.rs  server.rs  service.rs  store.rs  template.rs  tracking.rs  util.rs
tests/: smoke.rs
ui/: dist  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.json  vite.config.ts
ui/src/: App.svelte  app.css  test-setup.ts
ui/src/components/: ArtifactNode.svelte  ChartCard.svelte  CodeBlock.svelte  CompareBar.svelte  DatasetExplorer.svelte  DetailHeader.svelte  Duration.svelte  EmptyState.svelte  EvalSeriesCard.svelte  FilterBar.svelte  FilterChips.svelte  (+24 more)
(+31 files in other folders)
