[package]
name = "labctl"
version = "0.1.0"
edition = "2024"
description = "Reproducible lab run envelope, artifact lineage, and async eval control plane"

[features]
default = []
ui = ["dep:axum", "dep:tokio", "dep:tokio-stream", "dep:futures-util", "dep:tower", "dep:tower-http", "dep:rust-embed", "dep:mime_guess"]

[dependencies]
anyhow = "1.0"
chrono = { version = "0.4", default-features = false, features = ["clock", "serde"] }
clap = { version = "4.5", features = ["derive"] }
hex = "0.4"
rusqlite = { version = "0.32", features = ["bundled"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
toml = "0.8"
uuid = { version = "1.11", features = ["v7", "serde"] }
walkdir = "2.5"
which = "7"

axum = { version = "0.7", optional = true }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "signal", "sync", "time"], optional = true }
tokio-stream = { version = "0.1", features = ["sync"], optional = true }
futures-util = { version = "0.3", default-features = false, features = ["std"], optional = true }
tower = { version = "0.5", optional = true }
tower-http = { version = "0.6", features = ["cors", "trace"], optional = true }
rust-embed = { version = "8", optional = true }
mime_guess = { version = "2", optional = true }

[dev-dependencies]
tempfile = "3.14"
